<resources>
    <string name="app_name">FormacionDeportivaAndroid</string>
    <string name="nombre">Nombre</string>
    <string name="matricula">Matricula</string>
    <string name="perfil_title">Perfil</string>
    <string name="guardar">Guardar</string>
    <string name="genero_label">Genero</string>
    <string name="nacimiento_label">Fecha de nacimiento</string>
    <string name="pesoActual">Peso Actual</string>
    <string name="pesoMeta">Peso Meta</string>
    <string name="pesoMaximoPierna">Peso Máximo Pierna</string>
    <string name="pesoMaximoBrazo">Peso Máximo Brazo</string>
    <string name="grupoMuscular">Grupo Muscular</string>
    <string name="repeticion">Repeticiones</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="peso">Peso de carga</string>
    <string name="tomarFoto">Tomar Foto</string>
    <string name="title_activity_descripcion_rutina">DescripcionRutina</string>

    <string-array name="array_rutinas">
        <item>Rutina 1</item>
        <item>Rutina 2</item>
        <item>Rutina 3</item>
        <item>Rutina 4</item>
        <item>Rutina 5</item>
    </string-array>

    <string name="action_agrega">Agregar Rutina</string>
    <string name="crear">+</string>
    <string name="series">Series:</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="titulo_ejercicio">Cross Over</string>
    <string name="ejercicio_tipo">Tipo de Ejercicio</string>
    <string name="regresar"> Regresar </string>
    <string name="nombre_rutina">Agrega un nombre a la rutina</string>
    <string name="titulo_rutina">Rutinas</string>
    <string name="rut_seleccionada">Rutina 1</string>

    <string name="btn_historial">Enviar</string>
    <string name="tv_historial">Historial</string>
    <string name="tv_fechain">Fecha Inicial</string>
    <string name="tv_fechafin">Fecha Final</string>
    <string name="titulo_inicio">Bienvenido al Gimnasio de Pesas del Tecnologico de Monterrey, Campus Monterrey</string>
    <string name="bienvenido_inicio">Bienvenido</string>
    <string name="sesion">Sesión</string>
    <string name="seleccion_sesion">Seleccciona una Rutina</string>
    <string name="btn_comenzar">Comenzar</string>
    <string name="rutina">Rutina 1</string>
    <string name="eliminar">¿Desea eliminar esta rutina?</string>
    <string name="eliminarR">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre_ejercicio">Presa Horizontal</string>
    <string name="musculo">Musculo: Pierna</string>
    <string name="terminado">Terminado</string>
    <string name="btn_listo">Listo</string>
    <string name="infor">Información</string>
    <string name="info_inicio">
        Horario del gimnasio\n
        \tLunes - Viernes 06:00 - 21:00\n
        \tSábados 08:00 - 15:00\n
        \n
        Horario de los profesores:\n
        \tLunes - Viernes\n
        \t\tJorge Barrientos 07:00 - 15:00\n
        \t\tAntonio Martínez 13:00 - 21:00\n
        \n
        \tSábado:\n
        \t\tAriel Santos/Antonio Martínez\n
        \t\t08:00 - 15:00
    </string>
     <string name="reglamento">
         1.- Solo podrán ingresar alumnos del campus, los cuales deberán mostrar en el módulo de acceso su credencial actualizada\n\n
         2.- Contar con toalla de mano para higiene personal.\n\n
         3.- Portar ropa y tenis deporticos (playera con manga).\n\n
         4.- Ingresar sólo con envases herméticos para agua.\n\n
         5.- Evitar introducir alimentos, maletines o mochilas.\n\n
         6.- Los alumnos EXATEC, TecMilenio, UV, EGADE, EGAP, PrepaTec y Prepa Arte A.C. deberán realizar un pago para poder ingresar a la sala de pesas (pedir información en el módulo).\n\n
         *Se prohíbe el manejo y/o consumo de bebidas ergogénicas nutricionales dentro de las instalaciones deportivas. Sera sancionado quien no respete alguna de las reglas.\n\n

    </string>

    <string name="creditos">
        TransformaTEC ha sido desrrollado por estudiantes del Tecnológico de Monterrey durante el semestre Agosto-Diciembre de 2016 como parte del curso Proyectos de desarrllo para dispositivos
        móviles impartido por la maestra Martha Sordia Salidas. Esta aplicación es una adaptación de la versión de iOS que fue desarrollada en el semestre Enero-Mayo
        del mismo año.\n\n

        Desarrolladores:\n
        Armando Aguilar Muñiz A01196064\n
        Rolando Ruiz Guerrero A01280151\n
        Cesar de la Barreda Mtz. A01195359\n\n

        TransformaTEC se distribuye como está de manera gratuita y se prohibe su dsitribución y uso con fines de lucro.\n\n

        Íconos usados bajo licencia Creative Commons Attribution-NoDerivs 3.0 Unported por parte de Icons8\n
        www.icons8.com
    </string>
    <string name="btnHorario">Horario</string>
    <string name="btnReglamento">Reglamento</string>
    <string name="email">Complete los campos para mandar el correo</string>
    <string name="destinatario">Destinatario</string>
    <string name="subject">Subject</string>
    <string name="mandar">Mandar correo</string>
    <string name="correo">harmando_52@hotmail.com</string>
    <string name="title_activity_informacion">InformacionActivity</string>
</resources>
