<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="itesm.mx.formaciondeportivaandroid.EjercicioActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="itesm.mx.formaciondeportivaandroid.EjercicioActivity"
        android:background="@drawable/degradado"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="22pt"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/seleccion_sesion"
                android:textSize="12pt"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rutina"
            android:id="@+id/text_rutina"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="10pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_ejercicio"
            android:id="@+id/text_nomEjercicio"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="8pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musculo"
            android:id="@+id/text_musculo"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/image_ejercicio"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeticiones"
            android:id="@+id/text_repeticiones"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:id="@+id/text_series"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminado"
            android:id="@+id/switch_terminado"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:layout_marginTop="27dp"
            android:checked="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_listo"
            android:id="@+id/button_guardar"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:textColor="@color/black"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_gravity="bottom"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/button_home"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home_icon"/>

        <Button
            android:id="@id/button_rutinas"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rutinas_icon"/>

        <Button
            android:id="@+id/button_sesion"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sesion_icon"/>

        <Button
            android:id="@+id/button_history"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/history_icon"/>

        <Button
            android:id="@+id/button_perfil"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/perfil_icon"/>

    </LinearLayout>

</LinearLayout>
