<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.formaciondeportivaandroid.TiposRutina">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regresar"
            android:id="@+id/button_rutinas"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:id="@+id/button_guardar"
            android:layout_gravity="right"
            android:layout_marginLeft="150dp"
            android:layout_weight="0.69" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nomrut"
        android:text="@string/rut_seleccionada"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:id="@android:id/list"
        android:layout_weight="0.80" />

</LinearLayout>
