<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/degradado">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="itesm.mx.formaciondeportivaandroid.PerfilActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/degradadotap">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/perfil_title"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/button_guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/degradadotap"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/image_perfil"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:paddingRight="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre"/>

                        <EditText
                            android:id="@+id/edit_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombre"
                            android:inputType="textPersonName"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_matricula"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/matricula"/>

                        <EditText
                            android:id="@+id/edit_matricula"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/matricula"
                            android:inputType="textCapWords"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genero_label"
                android:layout_gravity="left"/>

            <Spinner
                android:id="@+id/spinner_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

            </Spinner>

            <TextView
                android:id="@+id/text_fechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nacimiento_label"
                android:layout_gravity="left"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_dia"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                </Spinner>

                <Spinner
                    android:id="@+id/spinner_mes"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                </Spinner>

                <Spinner
                    android:id="@+id/spinner_año"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoActual"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_pesoActual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoMeta"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_pesoMeta"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoMaximoPierna"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_pesoMaximoPierna"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoMaximoBrazo"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_pesoMaximoBrazo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grupoMuscular"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_grupoMuscular"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repeticion"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_repeticion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_peso"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/porcentaje"
                    android:layout_weight="1"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/edit_porcentaje"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_tomarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomarFoto"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/degradadotap">

        <Button
            android:id="@+id/button_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/home_icon"/>

        <Button
            android:id="@+id/button_rutinas"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/rutinas_icon"/>

        <Button
            android:id="@+id/button_sesion"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/sesion_icon"/>

        <Button
            android:id="@+id/button_history"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/history_icon"/>

        <Button
            android:id="@+id/button_perfil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/perfil_icon"/>

    </LinearLayout>

</LinearLayout>


