<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_tipo"
        android:layout_width="127dp"
        android:layout_height="126dp"
        android:contentDescription="@string/ejercicio_tipo"
        android:src="@mipmap/ic_launcher" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_tipo_ejercicio"
            android:hint="@string/ejercicio_tipo"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_tipo_musculo"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:textStyle="bold"
                android:id="@+id/tvS"
                android:visibility="invisible"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/repeticiones"
                android:textStyle="bold"
                android:id="@+id/tvR"
                android:visibility="invisible"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
